--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -30,7 +30,7 @@
             <form data-request="onFindEmpresa">
               <div class="inputs-container">
                 <div id="empresa-search" class="days-container empresa-search">
-                  <input type="text" name="search" placeholder="¿Qué estás buscando?" value="">
+                  <input id="input-empresa" type="text" name="search" placeholder="¿Qué estás buscando?" value="">
                   <span class="select-title">{{ 'NOMBRE DE EMPRESA'|_ }}</span>
                 </div>
                 <div id="empresa-category" class="days-container">
