--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4443,6 +4443,10 @@ footer {
   margin-bottom: 50px;
 }
 
+#input-empresa:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px rgba(255,255,255,0) inset !important;
+}
+
 @media (min-width: 710px) and (max-width: 1100px) {
   .bussinesPage {
     #search-event {
