--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3589,7 +3589,7 @@ footer {
   margin-bottom: 50px; }
 
 #input-empresa:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0) inset !important; }
+  -webkit-box-shadow: 0 0 0 30px #FFFFFF inset !important; }
 
 @media (min-width: 710px) and (max-width: 1100px) {
   .bussinesPage #search-event {
