--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4444,7 +4444,7 @@ footer {
 }
 
 #input-empresa:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px rgba(255,255,255,0) inset !important;
+  -webkit-box-shadow: 0 0 0 30px #FFFFFF inset !important;
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
