--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3402,8 +3402,7 @@ footer {
         padding-left: 55px;
         color: #4A4A4A;
         font-size: 15.72px;
-        line-height: 22px;
-        margin-top: -3px; }
+        line-height: 22px; }
         .bussinesPage #search-event .search-bar #empresa-search input:focus {
           outline: none; }
       .bussinesPage #search-event .search-bar #empresa-search ::-webkit-input-placeholder {
@@ -3589,7 +3588,8 @@ footer {
   margin-bottom: 50px; }
 
 #input-empresa:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px #FFFFFF inset !important; }
+  -webkit-box-shadow: 0 0 0 30px #FFFFFF inset !important;
+  background-color: #FFFFFF !important; }
 
 @media (min-width: 710px) and (max-width: 1100px) {
   .bussinesPage #search-event {
