--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4207,7 +4207,7 @@ footer {
           color: #4A4A4A;
           font-size: 15.72px;
           line-height: 22px;
-          margin-top: -3px;
+          //margin-top: -3px;
           &:focus {
             outline: none;
           }
@@ -4445,6 +4445,7 @@ footer {
 
 #input-empresa:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 30px #FFFFFF inset !important;
+  background-color: #FFFFFF !important;
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
