--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -186,18 +186,28 @@ code = "redes-sociales"
       
       $('#listEmp #bscEmpresa').on('click', function(){
 
+        var search = $('#inpSearch');
+        var searchMlt = 'todas-las-empresas';
+      
+        if(search.val()!='Todas las empresas' && search.val()!=''){
+             var searchMlt = search.val().replace( ' ', '_');
+        }
+
         var location = $('#sltLocation');
         var type = $('#sltType');
         var url = window.location.href
 
+
         var arr = url.split('/');
         var total = arr.length;
         
-        var itype = arr[total-2];
-        var ilocation = arr[total-1];
+        var itype = arr[total-3];
+        var ilocation = arr[total-2];
+        var isearch = arr[total-1];
         
         var nurl = url.replace( itype, type.val()); 
         nurl = nurl.replace( ilocation, location.val()); 
+        nurl = nurl.replace( isearch, searchMlt); 
 
         history.pushState(null, "", nurl);
 
