--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4443,7 +4443,7 @@ footer {
   margin-bottom: 50px;
 }
 
-#input-empresa:-webkit-autofill {
+#inpSearch:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 40px #FFFFFF inset !important;
   background-color: #FFFFFF !important;
 }
