--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3587,7 +3587,7 @@ footer {
 #all-empresas {
   margin-bottom: 50px; }
 
-#input-empresa:-webkit-autofill {
+#inpSearch:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 40px #FFFFFF inset !important;
   background-color: #FFFFFF !important; }
 
