--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4446,6 +4446,7 @@ footer {
 #inpSearch:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 40px #FFFFFF inset !important;
   background-color: #FFFFFF !important;
+  margin-top: 0px !important;
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
