--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3589,7 +3589,8 @@ footer {
 
 #inpSearch:-webkit-autofill {
   -webkit-box-shadow: 0 0 0 40px #FFFFFF inset !important;
-  background-color: #FFFFFF !important; }
+  background-color: #FFFFFF !important;
+  margin-top: 0px !important; }
 
 @media (min-width: 710px) and (max-width: 1100px) {
   .bussinesPage #search-event {
