--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3390,10 +3390,14 @@ footer {
   margin-bottom: 100px !important; }
   .bussinesPage #search-event .search-bar {
     width: 1052px; }
+    .bussinesPage #search-event .search-bar .inputs-container {
+      flex-wrap: wrap; }
     .bussinesPage #search-event .search-bar #empresa-category {
-      width: 330px; }
+      width: 50%; }
+    .bussinesPage #search-event .search-bar #empresa-location {
+      width: 100%; }
     .bussinesPage #search-event .search-bar #empresa-search {
-      width: 242px; }
+      width: 50%; }
       .bussinesPage #search-event .search-bar #empresa-search input {
         width: 100%;
         height: 100%;
