--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3389,12 +3389,16 @@ footer {
   width: 1100px;
   margin-bottom: 100px !important; }
   .bussinesPage #search-event .search-bar {
-    width: 1052px; }
+    width: 1052px;
+    height: 210px; }
     .bussinesPage #search-event .search-bar .inputs-container {
-      flex-wrap: wrap; }
+      flex-wrap: wrap;
+      flex-direction: column; }
     .bussinesPage #search-event .search-bar #empresa-category {
       width: 50%; }
     .bussinesPage #search-event .search-bar #empresa-location {
+      width: 100%; }
+    .bussinesPage #search-event .search-bar .button-container {
       width: 100%; }
     .bussinesPage #search-event .search-bar #empresa-search {
       width: 50%; }
