--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4192,8 +4192,10 @@ footer {
     margin-bottom: 100px !important;
     .search-bar {
       width: 1052px;
+      height: 210px;
       .inputs-container {
         flex-wrap: wrap;
+        flex-direction: column;
       }
       #empresa-category {
         //width: 330px;
@@ -4201,6 +4203,9 @@ footer {
       }
       #empresa-location {
         //width: 330px;
+        width: 100%;
+      }
+      .button-container {
         width: 100%;
       }
       #empresa-search {
