--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3389,7 +3389,8 @@ footer {
   width: 1100px;
   margin-bottom: 100px !important; }
   .bussinesPage #search-event .search-bar {
-    width: 1052px; }
+    width: 1052px;
+    height: 140px; }
     .bussinesPage #search-event .search-bar .inputs-container {
       flex-wrap: wrap; }
     .bussinesPage #search-event .search-bar form {
