--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4192,6 +4192,7 @@ footer {
     margin-bottom: 100px !important;
     .search-bar {
       width: 1052px;
+      height: 140px;
       .inputs-container {
         flex-wrap: wrap;
       }
