--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3390,7 +3390,7 @@ footer {
   margin-bottom: 100px !important; }
   .bussinesPage #search-event .search-bar {
     width: 1052px;
-    height: 140px; }
+    height: 210px; }
     .bussinesPage #search-event .search-bar .inputs-container {
       flex-wrap: wrap; }
     .bussinesPage #search-event .search-bar form {
@@ -3400,7 +3400,8 @@ footer {
     .bussinesPage #search-event .search-bar #empresa-location {
       width: 100%; }
     .bussinesPage #search-event .search-bar .button-container {
-      width: 100%; }
+      width: 100%;
+      height: 70px; }
     .bussinesPage #search-event .search-bar #empresa-search {
       width: 50%; }
       .bussinesPage #search-event .search-bar #empresa-search input {
