--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4202,10 +4202,12 @@ footer {
       #empresa-category {
         //width: 330px;
         width: 50%;
+        height: 70px;
       }
       #empresa-location {
         //width: 330px;
         width: 100%;
+        height: 70px;
       }
       .button-container {
         width: 100%;
@@ -4214,6 +4216,7 @@ footer {
       #empresa-search {
         //width: 242px;
         width: 50%;
+        height: 70px;
         input {
           width: 100%;
           height: 100%;
