--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3387,6 +3387,7 @@ footer {
 
 .bussinesPage #search-event {
   width: 1100px;
+  height: 253px;
   margin-bottom: 100px !important; }
   .bussinesPage #search-event .search-bar {
     width: 1052px;
