--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4189,6 +4189,7 @@ footer {
   }
   #search-event {
     width: 1100px;
+    height: 253px;
     margin-bottom: 100px !important;
     .search-bar {
       width: 1052px;
