--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4470,38 +4470,38 @@ footer {
 }
 
 @media (min-width: 710px) and (max-width: 1100px) {
-  .bussinesPage {
-    #search-event {
-      width: 94% !important;
-      height: 177px !important;
-      .search-bar {
-        width: 95% !important;
-        height: 140px !important;
-        margin: 0 auto !important;
-        form {
-          flex-direction: column !important;
-        }
-        .inputs-container {
-          width: 100%;
-          height: 50% !important;
-          flex-wrap: nowrap;
-          #empresa-category {
-            width: 34.5% !important;
-          }
-          #empresa-location {
-            width: 35% !important;
-          }
-          #empresa-search {
-            width: 30% !important;
-          }
-        }
-        .button-container {
-          width: 100% !important;
-          height: 50% !important;
-          border-top-right-radius: 0px !important;
-          border-bottom-left-radius: 4px;
-        }
-      }
-    }
-  }
+  // .bussinesPage {
+  //   #search-event {
+  //     width: 94% !important;
+  //     height: 177px !important;
+  //     .search-bar {
+  //       width: 95% !important;
+  //       height: 140px !important;
+  //       margin: 0 auto !important;
+  //       form {
+  //         flex-direction: column !important;
+  //       }
+  //       .inputs-container {
+  //         width: 100%;
+  //         height: 50% !important;
+  //         flex-wrap: nowrap;
+  //         #empresa-category {
+  //           width: 34.5% !important;
+  //         }
+  //         #empresa-location {
+  //           width: 35% !important;
+  //         }
+  //         #empresa-search {
+  //           width: 30% !important;
+  //         }
+  //       }
+  //       .button-container {
+  //         width: 100% !important;
+  //         height: 50% !important;
+  //         border-top-right-radius: 0px !important;
+  //         border-bottom-left-radius: 4px;
+  //       }
+  //     }
+  //   }
+  // }
 }
