--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4187,6 +4187,11 @@ footer {
     line-height: 33px;
     margin-bottom: 73px;
   }
+  .select2-container--default .select2-selection--multiple {
+    border: none !important;
+    height: 100%;
+    background-color: transparent;
+  }
   #search-event {
     width: 841px;
     height: 253px;
