--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3406,7 +3406,8 @@ footer {
       height: 70px; }
     .bussinesPage #search-event .search-bar #empresa-location {
       width: 100%;
-      height: 70px; }
+      height: 70px;
+      border-top: 1px solid #CECECE; }
     .bussinesPage #search-event .search-bar .button-container {
       width: 100%;
       height: 70px; }
