--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4214,6 +4214,7 @@ footer {
         //width: 330px;
         width: 100%;
         height: 70px;
+        border-top: 1px solid #CECECE;
       }
       .button-container {
         width: 100%;
