--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4192,6 +4192,10 @@ footer {
     height: 100%;
     background-color: transparent;
   }
+  .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    font-size: 15.72px;
+    color: #4A4A4A;
+  }
   #search-event {
     width: 841px;
     height: 253px;
