--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3392,7 +3392,8 @@ footer {
 
 .bussinesPage .select2-container--default .select2-selection--multiple .select2-selection__choice {
   font-size: 15.72px;
-  color: #4A4A4A; }
+  color: #4A4A4A;
+  margin-top: -5px !important; }
 
 .bussinesPage #search-event {
   width: 841px;
