--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4195,6 +4195,7 @@ footer {
   .select2-container--default .select2-selection--multiple .select2-selection__choice {
     font-size: 15.72px;
     color: #4A4A4A;
+    margin-top: -5px !important;
   }
   #search-event {
     width: 841px;
