--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4196,6 +4196,8 @@ footer {
     font-size: 15.72px;
     color: #4A4A4A;
     margin-top: -5px !important;
+    border: none;
+    padding: 2px 7px !important;
   }
   #search-event {
     width: 841px;
