--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3393,7 +3393,9 @@ footer {
 .bussinesPage .select2-container--default .select2-selection--multiple .select2-selection__choice {
   font-size: 15.72px;
   color: #4A4A4A;
-  margin-top: -5px !important; }
+  margin-top: -5px !important;
+  border: none;
+  padding: 2px 7px !important; }
 
 .bussinesPage #search-event {
   width: 841px;
