--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4216,6 +4216,7 @@ footer {
         //width: 330px;
         width: 50%;
         height: 70px;
+        border-top-right-radius: 4px;
       }
       #empresa-location {
         //width: 330px;
@@ -4226,6 +4227,7 @@ footer {
       .button-container {
         width: 100%;
         height: 70px;
+        border-top-right-radius: 0px !important;
       }
       #empresa-search {
         //width: 242px;
