--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3410,14 +3410,16 @@ footer {
       flex-direction: column; }
     .bussinesPage #search-event .search-bar #empresa-category {
       width: 50%;
-      height: 70px; }
+      height: 70px;
+      border-top-right-radius: 4px; }
     .bussinesPage #search-event .search-bar #empresa-location {
       width: 100%;
       height: 70px;
       border-top: 1px solid #CECECE; }
     .bussinesPage #search-event .search-bar .button-container {
       width: 100%;
-      height: 70px; }
+      height: 70px;
+      border-top-right-radius: 0px !important; }
     .bussinesPage #search-event .search-bar #empresa-search {
       width: 50%;
       height: 70px; }
