--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3411,7 +3411,8 @@ footer {
     .bussinesPage #search-event .search-bar #empresa-category {
       width: 50%;
       height: 70px;
-      border-top-right-radius: 4px; }
+      border-top-right-radius: 4px;
+      border-right: none !important; }
     .bussinesPage #search-event .search-bar #empresa-location {
       width: 100%;
       height: 70px;
