--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4217,6 +4217,7 @@ footer {
         width: 50%;
         height: 70px;
         border-top-right-radius: 4px;
+        border-right: none !important;
       }
       #empresa-location {
         //width: 330px;
