--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3622,3 +3622,34 @@ footer {
   -webkit-box-shadow: 0 0 0 40px #FFFFFF inset !important;
   background-color: #FFFFFF !important;
   margin-top: 0px !important; }
+
+@media (min-width: 710px) and (max-width: 920px) {
+  .bussinesPage #search-event {
+    width: 90%;
+    height: 253px;
+    margin-bottom: 100px !important; }
+    .bussinesPage #search-event .search-bar {
+      width: 94%;
+      height: 210px; }
+      .bussinesPage #search-event .search-bar .inputs-container {
+        flex-wrap: wrap; }
+      .bussinesPage #search-event .search-bar form {
+        flex-direction: column; }
+      .bussinesPage #search-event .search-bar #empresa-category {
+        width: 50%;
+        height: 70px;
+        border-top-right-radius: 4px;
+        border-right: none !important; }
+      .bussinesPage #search-event .search-bar #empresa-location {
+        width: 100%;
+        height: 70px;
+        border-top: 1px solid #CECECE; }
+      .bussinesPage #search-event .search-bar .button-container {
+        width: 100%;
+        height: 70px;
+        border-top-right-radius: 0px !important; }
+      .bussinesPage #search-event .search-bar #empresa-search {
+        width: 50%;
+        height: 70px; }
+      .bussinesPage #search-event .search-bar .empresa-search {
+        background-image: url("../svg/minilupa.svg") !important; } }
