--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4485,39 +4485,48 @@ footer {
   margin-top: 0px !important;
 }
 
-@media (min-width: 710px) and (max-width: 1100px) {
-  // .bussinesPage {
-  //   #search-event {
-  //     width: 94% !important;
-  //     height: 177px !important;
-  //     .search-bar {
-  //       width: 95% !important;
-  //       height: 140px !important;
-  //       margin: 0 auto !important;
-  //       form {
-  //         flex-direction: column !important;
-  //       }
-  //       .inputs-container {
-  //         width: 100%;
-  //         height: 50% !important;
-  //         flex-wrap: nowrap;
-  //         #empresa-category {
-  //           width: 34.5% !important;
-  //         }
-  //         #empresa-location {
-  //           width: 35% !important;
-  //         }
-  //         #empresa-search {
-  //           width: 30% !important;
-  //         }
-  //       }
-  //       .button-container {
-  //         width: 100% !important;
-  //         height: 50% !important;
-  //         border-top-right-radius: 0px !important;
-  //         border-bottom-left-radius: 4px;
-  //       }
-  //     }
-  //   }
-  // }
+@media (min-width: 710px) and (max-width: 920px) {
+.bussinesPage {
+  #search-event {
+      width: 90%;
+      height: 253px;
+      margin-bottom: 100px !important;
+      .search-bar {
+        width: 94%;
+        height: 210px;
+        .inputs-container {
+          flex-wrap: wrap;
+        }
+        form {
+          flex-direction: column;
+        }
+        #empresa-category {
+          //width: 330px;
+          width: 50%;
+          height: 70px;
+          border-top-right-radius: 4px;
+          border-right: none !important;
+        }
+        #empresa-location {
+          //width: 330px;
+          width: 100%;
+          height: 70px;
+          border-top: 1px solid #CECECE;
+        }
+        .button-container {
+          width: 100%;
+          height: 70px;
+          border-top-right-radius: 0px !important;
+        }
+        #empresa-search {
+          //width: 242px;
+          width: 50%;
+          height: 70px;
+        }
+        .empresa-search {
+          background-image: url('../svg/minilupa.svg') !important;
+        }
+      }
+    }
+}
 }
