--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4497,6 +4497,9 @@ footer {
         .inputs-container {
           flex-wrap: wrap !important;
         }
+        #empresa-inputs-container {
+          height: 140px !important;
+        }
         form {
           flex-direction: column !important;
         }
