--- a/themes/default/partials/site/searchempresa.htm
+++ b/themes/default/partials/site/searchempresa.htm
@@ -28,7 +28,7 @@
 <div id="search-event" class="search-bar-container" style="margin: auto">
           <div class="search-bar">
             <form data-request="onFindEmpresa">
-              <div class="inputs-container">
+              <div id="empresa-inputs-container" class="inputs-container">
                 <div id="empresa-search" class="days-container empresa-search">
                   <input id="inpSearch" type="text" name="search" placeholder="¿Qué estás buscando?" value="">
                   <span class="select-title">{{ 'NOMBRE DE EMPRESA'|_ }}</span>
