--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4515,6 +4515,7 @@ footer {
           width: 100% !important;
           height: 70px !important;
           border-top: 1px solid #CECECE !important;
+          border-top-right-radius: 0px;
         }
         .button-container {
           width: 100% !important;
