--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3624,7 +3624,7 @@ footer {
   margin-top: 0px !important; }
 
 @media (min-width: 710px) and (max-width: 920px) {
-  .search-empresa .header-container {
+  .search-empresas .header-container {
     margin-top: 180px !important; }
   .bussinesPage #search-event {
     width: 90% !important;
