--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4486,7 +4486,7 @@ footer {
 }
 
 @media (min-width: 710px) and (max-width: 920px) {
-.search-empresa {
+.search-empresas {
   .header-container {
     margin-top: 180px !important;
   }
