--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3354,6 +3354,9 @@ html, body {
   .icons {
     width: 100% !important;
   }
+  #empresa-search {
+    border-bottom: 1px solid #CECECE;
+  }
 }
 
 @media (max-width: 725px) {
