--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3354,8 +3354,8 @@ html, body {
   .icons {
     width: 100% !important;
   }
-  #empresa-search {
-    border-bottom: 1px solid #CECECE;
+  #empresa-location {
+    border-top: none !important;
   }
 }
 
