--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3357,6 +3357,9 @@ html, body {
   #empresa-location {
     border-top: none !important;
   }
+  .bussinesPage .select2-container--default .select2-selection--multiple .select2-selection__choice {
+    font-size: 11px !important; 
+  }
 }
 
 @media (max-width: 725px) {
