--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3358,7 +3358,7 @@ html, body {
     border-top: none !important;
   }
   .bussinesPage .select2-container--default .select2-selection--multiple .select2-selection__choice {
-    font-size: 11px !important; 
+    font-size: 11px !important;
   }
 }
 
@@ -3368,7 +3368,7 @@ html, body {
     line-height: 130px !important;
   }
 
-  section.desc h3 {
+  section.desc h3, section.info h3 {
     font-size: 44px !important;
     line-height: 50px !important;
   }
