--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -2987,7 +2987,7 @@ html, body {
       top: 0px !important;
     }
   }
-  .bussinesPage section.desc {
+  .bussinesPage section.desc, .bussinesPage section.info {
     max-width: 80% !important;
     margin-top: 70px !important;
   }
