--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -3404,6 +3404,9 @@ html, body {
     margin-top: 0px !important;
     min-height: 650px;
   }
+  .header-empresa {
+    margin-top: 0px !important;
+  }
   .ayuda-header, .static-header, .about-header {
     .img-header {
       top: 0px !important;
