--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3428,7 +3428,8 @@ footer {
     .bussinesPage #search-event .search-bar .button-container {
       width: 100%;
       height: 70px;
-      border-top-right-radius: 0px !important; }
+      border-top-right-radius: 0px !important;
+      border-bottom-left-radius: 4px !important; }
     .bussinesPage #search-event .search-bar #empresa-search {
       width: 50%;
       height: 70px; }
