--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4242,6 +4242,7 @@ footer {
         width: 100%;
         height: 70px;
         border-top-right-radius: 0px !important;
+        border-bottom-left-radius: 4px !important;
       }
       #empresa-search {
         //width: 242px;
