--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4243,6 +4243,9 @@ footer {
         height: 70px;
         border-top-right-radius: 0px !important;
         border-bottom-left-radius: 4px !important;
+        input[type="submit"] {
+            border-bottom-left-radius: 4px !important;
+        }
       }
       #empresa-search {
         //width: 242px;
