--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -1160,6 +1160,7 @@ html, body {
 /* SEARCH */
 .upwards {
   border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important;
 }
 
 .downwards {
