--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -985,7 +985,8 @@ html, body {
 
 /* SEARCH */
 .upwards {
-  border-top-left-radius: 0px !important; }
+  border-top-left-radius: 0px !important;
+  border-top-right-radius: 0px !important; }
 
 .downwards {
   border-bottom-left-radius: 0px !important; }
