--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -195,10 +195,10 @@ code = "redes-sociales"
         }
 
         var location = $('#sltLocation');
-        var locationMlt = 'todas-las-empresas';
+        var locationMlt = 'todos-los-municipios';
 
         var plocation = location.val() + "";
-        if(plocation !='Todas las empresas' && plocation !=''){
+        if(plocation !='Todos los municipios' && plocation !=''){
              var locationMlt = plocation.replace( ',', '_');
         }
 
