--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -198,7 +198,8 @@ code = "redes-sociales"
         var locationMlt = 'todos-los-municipios';
 
         var plocation = location.val() + "";
-        if(plocation !='Todos los municipios' && plocation !=''){
+                
+        if(plocation !='Todos los municipios' && plocation !='null'){
              var locationMlt = plocation.replace( ',', '_');
         }
 
