--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4238,6 +4238,9 @@ footer {
         width: 100%;
         height: 70px;
         border-top: 1px solid #CECECE;
+        .select2-container .select2-search--inline {
+          margin-top: -11px;
+        }
       }
       .button-container {
         width: 100%;
