--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -184,43 +184,103 @@ code = "redes-sociales"
 
     <script>
       
-      $('#listEmp #bscEmpresa').on('click', function(){
+        $('#listEmp #bscEmpresa').on('click', function(){
 
-        var search = $('#inpSearch');
-        var searchMlt = 'todas-las-empresas';
+            var search = $('#inpSearch');
+            var searchMlt = 'todas-las-empresas';
 
-      
-        if(search.val()!='Todas las empresas' && search.val()!=''){
-             var searchMlt = search.val().replace( ' ', '_');
-        }
 
-        var location = $('#sltLocation');
-        var locationMlt = 'todos-los-municipios';
+            if(search.val()!='Todas las empresas' && search.val()!=''){
+                 var searchMlt = search.val().replace( ' ', '_');
+            }
 
-        var plocation = location.val() + "";
-                
-        if(plocation !='Todos los municipios' && plocation !='null'){
-             var locationMlt = plocation.replace( ',', '_');
-        }
+            var location = $('#sltLocation');
+            var locationMlt = 'todos-los-municipios';
 
-        var type = $('#sltType');
-        var url = window.location.href
+            var plocation = location.val() + "";
+                    
+            if(plocation !='Todos los municipios' && plocation !='null'){
+                 var locationMlt = plocation.replace( ',', '_');
+            }
 
-        var arr = url.split('/');
-        var total = arr.length;
-        
-        var itype = arr[total-3];
-        var ilocation = arr[total-2];
-        var isearch = arr[total-1];
+            var type = $('#sltType');
+            var url = window.location.href
 
-                
-        var nurl = url.replace( itype, type.val()); 
-        nurl = nurl.replace( ilocation, locationMlt); 
-        nurl = nurl.replace( isearch, searchMlt); 
+            var arr = url.split('/');
+            var total = arr.length;
 
-        history.pushState(null, "", nurl);
+            var itype = arr[total-3];
+            var ilocation = arr[total-2];
+            var isearch = arr[total-1];
 
-      });
+                    
+            var nurl = url.replace( itype, type.val()); 
+            nurl = nurl.replace( ilocation, locationMlt); 
+            nurl = nurl.replace( isearch, searchMlt); 
+
+            history.pushState(null, "", nurl);
+
+        });
+
+        $('#prtlSearchExperiences #bscExperience').on('click', function(){
+
+            var days = $('#sltDays');
+            var interest = $('#sltInterest');
+            var tvisit = $('#sltTvisit');
+
+            var sDays = slugIn(days.val());
+            var sInterest = slugIn(interest.val());
+            var sTvisit = slugIn(tvisit.val());
+
+            if(sDays == 'all'){
+              sDays = 'dejate-llevar';
+            }
+
+            if(sInterest == 'all'){
+              sInterest ='todos-los-intereses';
+            }
+
+            if(sTvisit == 'all'){
+              sTvisit ='todo-cadiz';
+            }
+
+            var url = window.location.href
+
+            var arr = url.split('/');
+            var total = arr.length;
+
+            var idays = arr[total-3];
+            var iinterest = arr[total-2];
+            var itvisit = arr[total-1];
+
+            var nurl = url.replace( idays, sDays); 
+            nurl = nurl.replace( iinterest, sInterest); 
+            nurl = nurl.replace( itvisit, sTvisit); 
+
+            history.pushState(null, "", nurl);
+
+
+        });
+
+        var slugIn = function(str) {
+          str = str.replace(/^\s+|\s+$/g, ''); // trim
+          str = str.toLowerCase();
+
+          // remove accents, swap ñ for n, etc
+          var from = "ãàáäâẽèéëêìíïîõòóöôùúüûñç·/_,:;";
+          var to   = "aaaaaeeeeeiiiiooooouuuunc------";
+          for (var i=0, l=from.length ; i<l ; i++) {
+            str = str.replace(new RegExp(from.charAt(i), 'g'), to.charAt(i));
+          }
+
+          str = str.replace(/[^a-z0-9 -]/g, '') // remove invalid chars
+            .replace(/\s+/g, '-') // collapse whitespace and replace by -
+            .replace(/-+/g, '-')
+            .replace('-y-','-'); // collapse dashes
+
+          return str;
+        };
+
      
     </script>
 
