--- a/plugins/rainlab/pages/assets/css/style-event.css
+++ b/plugins/rainlab/pages/assets/css/style-event.css
@@ -363,7 +363,7 @@
       font-size: 16px;
       line-height: 22px;
       margin-bottom: 0px; }
-      .event-features .feature-exp .feature-txt:hover {
+      .event-features .feature-exp .feature-txt:hover, .event-features .feature-exp .feature-txt:focus {
         text-decoration: none; }
     .event-features .feature-exp .feature-txt-mapa {
       color: rgba(255, 255, 255, 0.5);
