--- a/plugins/rainlab/pages/assets/scss/style-event.scss
+++ b/plugins/rainlab/pages/assets/scss/style-event.scss
@@ -365,7 +365,7 @@
       font-size: 16px;
       line-height: 22px;
       margin-bottom: 0px;
-      &:hover {
+      &:hover, &:focus {
         text-decoration: none;
       }
     }
