--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4576,3 +4576,70 @@ footer {
     margin-top: 0px !important;
   }
 }
+
+
+@mixin flex-direction($direction) {
+  -webkit-flex-direction: $direction;
+     -moz-flex-direction: $direction;
+      -ms-flex-direction: $direction;
+          flex-direction: $direction;
+}
+
+@mixin justify-content($justify) {
+  -webkit-justify-content: $justify;
+     -moz-justify-content: $justify;
+      -ms-justify-content: $justify;
+          justify-content: $justify;
+            -ms-flex-pack: $justify;
+}
+
+@mixin align-items($align) {
+  -webkit-align-items: $align;
+     -moz-align-items: $align;
+      -ms-align-items: $align;
+          align-items: $align;
+}
+
+@mixin flex-wrap($wrap) {
+  -webkit-flex-wrap: $wrap;
+     -moz-flex-wrap: $wrap;
+      -ms-flex-wrap: $wrap;
+          flex-wrap: $wrap;
+}
+
+/* Características de texto */
+@mixin text-prop($color, $size, $line) {
+  color: $color;
+  font-size: $size;
+  line-height: $line;
+}
+
+.not-found {
+  @include flexbox();
+  @include align-items(center);
+  @include justify-content(center);
+  @include flex-direction(column);
+  h1 {
+    @include text-prop(white, 300px, 360px);
+    font-weight: 100;
+    margin: 0px;
+  }
+  p {
+    @include text-prop(white, 20px, 27px);
+    font-weight: 300;
+    margin-top: 0px;
+    margin-bottom: 6px;
+  }
+  a {
+    @include text-prop(white, 12px, 16px);
+    font-weight: 300;
+    text-decoration: none;
+    img {
+      margin-left: 16px;
+    }
+    &:hover, &:focus, &:active {
+      opacity: 0.5;
+      text-decoration: none;
+    }
+  }
+}
