--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3688,7 +3688,10 @@ footer {
 .not-found-container {
   height: 100vh;
   width: 100%;
-  background-color: #363636;
+  background-image: url("../img/cuatrocerocuatro.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
