--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4618,7 +4618,10 @@ footer {
 .not-found-container {
   height: 100vh;
   width: 100%;
-  background-color: #363636;
+  background-image: url('../img/cuatrocerocuatro.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   @include flexbox();
   @include align-items(center);
   @include justify-content(center);
